[gd_scene load_steps=2 format=3 uid="uid://b1t3a2hm6a3s7"]

[ext_resource type="Script" path="res://Menus/level_select.gd" id="1_ylq5s"]

[node name="LevelSelect" type="CanvasLayer"]
script = ExtResource("1_ylq5s")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Level Select"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 25

[node name="LevelSelectContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 5

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 28.0
offset_top = 30.0
offset_right = 110.0
offset_bottom = 83.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Back"
